fix(layout user menu): fixed apparence none bug on safari

--- a/src/app/assets/scss/_scrollbar.scss
+++ b/src/app/assets/scss/_scrollbar.scss
@@ -3,7 +3,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-white dark:bg-dark-900 rounded-md border-[3px] border-solid border-main-gray-dimed dark:border-dark-700;
+  @apply bg-white dark:bg-black rounded-md border-[3px] border-solid border-main-gray-dimed dark:border-dark-700;
 }
 
 ::-webkit-scrollbar-track {
